# rism

./: Cargo.toml  tauri.conf.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  publish.yml
icons/: icon.icns
src/: cli.rs  main.rs
