[package]
name = "rism"
version = "0.0.0"
description = "Application-specific browser based on tauri"
authors = ["thorou"]
license = "GPL-3.0"
edition = "2021"
rust-version = "1.60"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
url = "2.5.0"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
lto = true
